worked on contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1224,6 +1224,24 @@ a:hover {
   }
 }
 
+.contact-icon {
+  display: inline-block;
+  width: 30px; /* Adjust the size as needed */
+  height: 30px; /* Adjust the size as needed */
+  background-color: #ffffff; /* LinkedIn blue color */
+  color: #fff; /* White color for the icon */
+  border-radius: 50%; /* Create a circular shape */
+  text-align: center;
+  line-height: 30px; /* Center the icon vertically */
+  font-size: 20px; /* Adjust the font size as needed */
+}
+
+.contact-icon:hover{
+  background-color: #0062d3;
+  color:#18d26e
+}
+
+
 /*--------------------------------------------------------------
 # Blog
 --------------------------------------------------------------*/
